--- a/.classpath
+++ b/.classpath
@@ -5,57 +5,63 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/java-client-3.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-java-2.52.0.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-2.52.0.jar"/>
-	<classpathentry kind="lib" path="lib/apache-mime4j-0.6.jar"/>
-	<classpathentry kind="lib" path="lib/bsh-2.0b4.jar"/>
-	<classpathentry kind="lib" path="lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cssparser-0.9.16.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/guava-19.0.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/htmlunit-2.18.jar"/>
-	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.17.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.4.3.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.5.jar"/>
-	<classpathentry kind="lib" path="lib/jasper-compiler-5.5.15.jar"/>
-	<classpathentry kind="lib" path="lib/jasper-compiler-jdt-5.5.15.jar"/>
-	<classpathentry kind="lib" path="lib/jasper-runtime-5.5.15.jar"/>
-	<classpathentry kind="lib" path="lib/javax.servlet-api-3.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jcommander-1.48.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-continuation-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-http-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-io-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-jmx-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-security-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-server-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-servlet-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-servlets-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-util-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jsp-api-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/nekohtml-1.9.22.jar"/>
-	<classpathentry kind="lib" path="lib/netty-3.5.7.Final.jar"/>
-	<classpathentry kind="lib" path="lib/phantomjsdriver-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/serializer-2.7.2.jar"/>
-	<classpathentry kind="lib" path="lib/testng-6.9.9.jar"/>
-	<classpathentry kind="lib" path="lib/websocket-api-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/websocket-client-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/websocket-common-9.2.13.v20150730.jar"/>
-	<classpathentry kind="lib" path="lib/xalan-2.7.2.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-collections-3.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/cssparser-0.9.16.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/htmlunit-2.18.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/htmlunit-core-js-2.17.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/httpclient-4.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/httpcore-4.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/httpmime-4.5.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jasper-compiler-5.5.15.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jasper-compiler-jdt-5.5.15.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jasper-runtime-5.5.15.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-continuation-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-http-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-io-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-jmx-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-security-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-server-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-servlet-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-servlets-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jetty-util-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/jsp-api-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/nekohtml-1.9.22.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/netty-3.5.7.Final.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/phantomjsdriver-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/websocket-api-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/websocket-client-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/websocket-common-9.2.13.v20150730.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.52.0/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-core-1.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-html-0.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-java-1.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-jvm-deps-1.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
