--- a/.classpath
+++ b/.classpath
@@ -63,5 +63,7 @@
 	<classpathentry kind="lib" path="lib/cucumber-jar/gherkin-2.12.2.jar"/>
 	<classpathentry kind="lib" path="lib/cucumber-jar/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-junit-1.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jar/gherkin-jvm-deps-1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
