--- a/.classpath
+++ b/.classpath
@@ -65,5 +65,6 @@
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/cucumber-jar/cucumber-junit-1.1.7.jar"/>
 	<classpathentry kind="lib" path="lib/cucumber-jar/gherkin-jvm-deps-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/testng-6.8.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
